# hust-c-advanced

./: CMakeLists.txt  Friend.c  Ghi chú bài học các tuần  HaiDuong.c  K61.c  Menu.c  NN.h  NguyenHaiDuong_20194530.c  Report_C_project.odt  Yêu cầu tuần 10  Yêu cầu tuần 12  Yêu cầu tuần 5  Yêu cầu tuần 8  Yêu cầu đề bài  bfs-demo-main.c  data.txt  dichvu2.txt  dijkstra.c  friends.txt  g1-main.c  graph_by_jrb_with_ID.h  hocphan.txt  input.txt  iq.h  iqueue-demo2.c  istack.h  ivec-main.c  main.c  passed.txt  phone-main.c  tests.txt  tiepXucGan.txt  tiepxuc.txt  webpages.txt  yêu cầu tuần 7
Dictionary/: gccCommand.txt
K63-Hoanh/: graph_by_jrb_with_ID.h  test1.c  test3.c
K63-Hoanh/b/: CMakeCache.txt  build.ninja  rules.ninja  test2  test3  test5
K63-Hoanh/libfdr/: cgraph_datatype.h  graph_by_jrb_with_ID.h
Project-TranBaVinhDuc/Dict/: taofilebtree.c
Week1/: NguyenHaiDuong.txt  sort-main.c
Week2/: union.c
Week3/: b.h
Week3/phoneBook/: phones-book.c
Week3/src/: helper.c  soSanhHieuNangQuicksort.c  sort-main
Week4/: Yêu cầu tuần 4
Week4/phoneBook/: phone-book-fdr.c
Week6/: Yêu cầu tuần 6
Week6/bookview/: CMakeLists.txt  bookview-main.c  tree-view-demo.c
Week7/subtree/: input.txt
Week7/subtree/libfdr/: CMakeLists.txt
b/: CMakeCache.txt  CPackSourceConfig.cmake  book.bt  build.ninja  cmake_install.cmake  phone-bt  rules.ninja  vector
b/cmake-btree/: bigt  bigtdel  bt  btr
cmake-gtk/: CMakeLists.txt  README.md  input_x.glade  power2.c  power2_gui.c  power2_gui_buider.py  power2_gui_builder.c  textview.glade
cmake-sqlite/: select.c
cmake-sqlite/sqlite/: README.md
exams/K62/: Mylib.h
exams/K63/K63-1/K63-Hoanh/: CMakeLists.txt  data.txt  duyet_cay.h  test2.c  test4.c
exams/K63/K63-1/K63-Hoanh/b/: cmake_install.cmake  core  test1  test4
exams/K63/K63-1/K63-Hoanh/b/libfdr/: cmake_install.cmake
libfdr/: cgraph_datatype.h  dllist.h  graph_by_jrb.h
libraries/cmake-btree/: CMakeLists.txt  README.md
libraries/cmake-gtk/: input_x2.glade  textview.c
libraries/cmake-sqlite/: CMakeLists.txt  README.md  insert.c
projects/Duong_Duan_Long/: Phân chia công việc  Phân chia công việc.md  Yêu cầu bài tập lớn  Yêu cầu bài tập lớn.md
sqlite-autoconf-3350300/: configure  configure.ac  sqlite3rc.h
subtree/: subtree-main.c
subtree/b/: build.ninja  rules.ninja
templates/: Những hàm cần lưu ý
thiGiuaKi/: CMakeLists.txt  dns.txt
thiGiuaKi/b/: cmake_install.cmake
weeklyCode/: CMakeLists.txt  input.txt
weeklyCode/Week1/: a.out  mylib.c  soSanhHieuNangQuicksort  sort-main
weeklyCode/Week11/: Yêu cầu tuần 11
weeklyCode/Week13/: CMakeLists.txt  baiTap.c
weeklyCode/Week2/: Yêu cầu tuần 2  file_sort  jval-sort  jval-sort-w  jval-sort.c  mylib.c  mylib.h  points  points.c  sort-main  union  utility.c
weeklyCode/Week3/: Yêu cầu tuần 3  a.h  c.h  main.c
weeklyCode/Week4/phoneBook/: CMakeLists.txt  phone-demo.c  sort-main  utility.h
weeklyCode/Week4/phoneBook/b/: CMakeCache.txt  build.ninja  rules.ninja
weeklyCode/Week4/phoneBook/b/libfdr/: cmake_install.cmake
(+151 files in other folders)
